@@ -178,8 +178,8 @@ class WinFromIframeTest {
                     () -> assertTrue(actualPayload.getWageredDepositInfo().isEmpty(), "nats.payload.wagered_deposit_info")
             );
 
-            var expectedBetInfo = expectedBetInfoList.getFirst();
-            var actualBetInfo = actualPayload.getBetInfo().getFirst();
+            var expectedBetInfo = expectedBetInfoList.get(0);
+            var actualBetInfo = actualPayload.getBetInfo().get(0);
             assertAll("Проверка полей внутри bet_info NATS payload",
                     () -> assertEquals(expectedBetInfo.getChampId(), actualBetInfo.getChampId(), "nats.payload.bet_info.champId"),
                     () -> assertEquals(expectedBetInfo.getChampName(), actualBetInfo.getChampName(), "nats.payload.bet_info.champ_name"),
@@ -217,7 +217,7 @@ class WinFromIframeTest {
 
             var winEventPayload = testData.winEvent.getPayload();
             var player = testData.registeredPlayer.getWalletData();
-            var betInfo = winEventPayload.getBetInfo().getFirst();
+            var betInfo = winEventPayload.getBetInfo().get(0);
 
             var actualDbBetInfoList = objectMapper
                     .readValue(dbTransaction.getBetInfo(),
